Season 02 - Episode 15 -- clean pom files